--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.data.mongodb.host=127.0.0.1
 spring.data.mongodb.database=local
+spring.http.multipart.maxFileSize=100Mb
+spring.http.multipart.maxRequestSize=100Mb
