修改文件保存路径

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.data.mongodb.host=127.0.0.1
 spring.data.mongodb.database=local
 spring.http.multipart.maxFileSize=100Mb
 spring.http.multipart.maxRequestSize=100Mb
+server.context-path=/alice
+picUrl="/opt/pictures"
