新增了首页

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,8 @@
      multipart:
        max-file-size: 100Mb
        max-request-size: 100Mb
+   thymeleaf:
+     cache: false
  server:
    context-path: /alice
 
